fix: permalink anchor alignment

--- a/src/Web/assets/typography.css
+++ b/src/Web/assets/typography.css
@@ -150,11 +150,11 @@
 		}
 
 		& a {
-			@apply inline-flex items-baseline gap-x-1.5;
+			@apply inline-flex items-center gap-x-1.5;
 		}
 
 		& a span:has(svg) {
-			@apply translate-y-px absolute -ms-9 opacity-0 p-1 bg-(--ui-bg-elevated)
+			@apply absolute -ms-9 opacity-0 p-1 bg-(--ui-bg-elevated)
 				hover:text-(--ui-primary) rounded-md hidden lg:flex
 				text-(--ui-text-muted) transition border border-(--ui-border);
 		}
